--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,6 +2,8 @@ pipeline {
     agent any
 
     environment {
+        AWS_ACCESS_KEY_ID     = credentials('AWS_ACCESS_KEY_ID')
+        AWS_SECRET_ACCESS_KEY = credentials('AWS_SECRET_ACCESS_KEY')
         ANSIBLE_HOST_KEY_CHECKING = 'False'
     }
 
@@ -13,7 +15,7 @@ pipeline {
     stages {
         stage('Clean Workspace') {
             steps {
-                // cleanWs()
+                cleanWs()
             }
         }
 
@@ -28,14 +30,16 @@ pipeline {
 
         stage('Generate Ansible Inventory') {
             steps {
+                sh 'chmod +x terraform/inventory-gen.sh'
                 sh './terraform/inventory-gen.sh'
-                sh 'cat ansible/inventory.ini'
+                sh 'cat terraform/ansible/inventory.ini'
             }
         }
 
-        stage('Checkout NiFi 1.26.0') {
+        stage('Checkout Apache NiFi 1.26.0') {
             steps {
                 sh '''
+                    rm -rf nifi
                     git clone https://github.com/apache/nifi.git
                     cd nifi
                     git checkout rel/nifi-1.26.0
@@ -43,7 +47,7 @@ pipeline {
             }
         }
 
-        stage('Build with Maven') {
+        stage('Build NiFi with Maven') {
             steps {
                 dir('nifi/nifi-assembly') {
                     sh 'mvn clean install -U -DskipTests'
@@ -55,10 +59,12 @@ pipeline {
             steps {
                 withCredentials([file(credentialsId: 'nifi-key', variable: 'NIFI_KEY_FILE')]) {
                     sh '''
-                        sed "s|ansible_ssh_private_key_file=.*|ansible_ssh_private_key_file=$NIFI_KEY_FILE|" \
-                            ansible/inventory.ini > ansible/inventory_final.ini
+                        mkdir -p ansible
+                        cp terraform/ansible/inventory.ini ansible/inventory.ini
 
-                        ansible-playbook -i ansible/inventory_final.ini ansible/install-nifi.yml
+                        sed -i "s|ansible_ssh_private_key_file=.*|ansible_ssh_private_key_file=$NIFI_KEY_FILE|" ansible/inventory.ini
+
+                        ansible-playbook -i ansible/inventory.ini ansible/install-nifi.yml
                     '''
                 }
             }
@@ -68,7 +74,7 @@ pipeline {
             steps {
                 script {
                     def ip = sh(script: "terraform -chdir=terraform output -raw instance_public_ip", returnStdout: true).trim()
-                    echo "NiFi is now available at: http://${ip}:8443/nifi"
+                    echo "\u2705 NiFi is now available at: http://${ip}:8443/nifi"
                 }
             }
         }
