--- a/ansible/install-nifi.yml
+++ b/ansible/install-nifi.yml
@@ -72,7 +72,7 @@
         regexp: '^nifi.security.(keystore|keystoreType|keystorePasswd|keyPasswd|truststore|truststoreType)='
         replace: '#\g<0>'
 
-    - name: Create NiFi systemd service
+        - name: Create NiFi systemd service
       copy:
         dest: /etc/systemd/system/nifi.service
         content: |
@@ -82,10 +82,11 @@
 
           [Service]
           Type=forking
+          User=ubuntu
+          Environment=JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64
           ExecStart={{ nifi_target_dir }}/bin/nifi.sh start
           ExecStop={{ nifi_target_dir }}/bin/nifi.sh stop
           Restart=on-failure
-          User=ubuntu
 
           [Install]
           WantedBy=multi-user.target
