--- a/ansible/install-nifi.yml
+++ b/ansible/install-nifi.yml
@@ -62,23 +62,29 @@
       shell: hostname -I | awk '{print $1}'
       register: private_ip
 
-    - name: Set HTTP host to EC2 private IP
+    - name: Set HTTP host to private IP
       lineinfile:
         path: "{{ nifi_target_dir }}/conf/nifi.properties"
         regexp: '^nifi.web.http.host='
         line: "nifi.web.http.host={{ private_ip.stdout }}"
-
+  
     - name: Set HTTP port to 8443
       lineinfile:
         path: "{{ nifi_target_dir }}/conf/nifi.properties"
         regexp: '^nifi.web.http.port='
         line: 'nifi.web.http.port=8443'
-
-    - name: Comment out security properties
+    
+    - name: Comment out HTTPS host and port
       replace:
         path: "{{ nifi_target_dir }}/conf/nifi.properties"
-        regexp: '^nifi.security.(keystore|keystoreType|keystorePasswd|keyPasswd|truststore|truststoreType)='
+        regexp: '^nifi.web.https.(host|port)='
         replace: '#\g<0>'
+
+- name: Comment out security properties
+  replace:
+    path: "{{ nifi_target_dir }}/conf/nifi.properties"
+    regexp: '^nifi.security.(keystore|keystoreType|keystorePasswd|keyPasswd|truststore|truststoreType)='
+    replace: '#\g<0>'
 
     - name: Create NiFi systemd service
       copy:
